# whisky-recommender

./: .gitignore  README.md  main.py  pyproject.toml  schema.sql
tests/: test_scraper.py
whisky/: database.py  recommend.py  scrape.py
