[tool.poetry]
name = "whisky-tasting"
version = "0.1.0"
description = ""
authors = ["Tim Helfensdörfer <thelfensdrfer@gmail.com>"]
readme = "README.md"
packages = [{include = "whisky_tasting"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
tqdm = "^4.66.1"
aiohttp = "^3.9.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

